# tuiman

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/apps/tuiman-backend/: Cargo.toml
backend/apps/tuiman-backend/src/: main.rs
backend/crates/tuiman-domain/: Cargo.toml
backend/crates/tuiman-domain/src/: lib.rs
backend/crates/tuiman-http/: Cargo.toml
backend/crates/tuiman-http/src/: lib.rs
backend/crates/tuiman-ipc/: Cargo.toml
backend/crates/tuiman-ipc/src/: lib.rs
backend/crates/tuiman-keychain/: Cargo.toml
backend/crates/tuiman-keychain/src/: lib.rs
backend/crates/tuiman-storage/: Cargo.toml
backend/crates/tuiman-storage/src/: lib.rs
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALL.md  KEYBINDINGS.md  RELEASE.md  ROADMAP.md  SECURITY.md  STORAGE.md
frontend/: package.json
frontend/src/: App.tsx  index.tsx  theme.ts  types.ts
frontend/src/rpc/: client.ts
frontend/src/services/: api.ts  exportImport.ts  historyStore.ts  httpClient.ts  keychain.ts  paths.ts  requestStore.ts
include/tuiman/: editor.h  export_import.h  history_store.h  http_client.h  json_body.h  keychain_macos.h  paths.h  request_store.h
scripts/: install.sh  tuiman
src/: main.c
src/auth/: keychain_macos.c
src/core/: editor.c  json_body_macos.m  paths.c
src/net/: http_client.c
src/store/: export_import.c  history_store.c  request_store.c
tools/parity/: checklist.md  run-smoke.sh  ts-smoke.sh
