[package]
name = "tuiman-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tuiman-domain = { path = "../../crates/tuiman-domain" }
tuiman-ipc = { path = "../../crates/tuiman-ipc" }
tuiman-storage = { path = "../../crates/tuiman-storage" }
